--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "yeadamkim.com",
   "private": true,
   "description": "Yeadam's personal website",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "Yeadam Kim",
   "dependencies": {
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.12.4",
     "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-mdx": "^5.12.1",
+    "gatsby-plugin-sass": "^3.2.0",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.0",
@@ -18,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-rough-notation": "^1.0.5",
+    "sass": "^1.69.2",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
@@ -29,7 +32,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "dev": "gatsby develop",
+    "develop": "gatsby develop",
     "start": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "serve": "gatsby serve",
