--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yeadamkim.com",
   "private": true,
   "description": "Yeadam's personal website",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": "Yeadam Kim",
   "dependencies": {
     "babel-plugin-styled-components": "^2.1.4",
@@ -13,6 +13,7 @@
     "gatsby-plugin-mdx": "^5.12.1",
     "gatsby-plugin-offline": "^6.12.1",
     "gatsby-plugin-sass": "^6.12.1",
+    "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.0",
