--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "trailingComma": "all",
   "singleQuote": false,
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "printWidth": 80
 }
