--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
+  "printWidth": 80,
   "arrowParens": "always",
   "semi": true,
   "trailingComma": "all",
   "singleQuote": false,
   "tabWidth": 2,
-  "useTabs": false,
-  "printWidth": 80
+  "useTabs": false
 }
