--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "description": "Yeadam's personal website",
   "version": "1.1.3",
   "author": "Yeadam Kim",
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.12.4",
@@ -15,7 +12,7 @@
     "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-mdx": "^5.12.1",
     "gatsby-plugin-offline": "^6.12.1",
-    "gatsby-plugin-sass": "^6.14.0",
+    "gatsby-plugin-sass": "^6.12.1",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-sitemap": "^6.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
@@ -26,12 +23,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-rough-notation": "^1.0.5",
+    "sass": "^1.69.3",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
-    "ajv": "^8.17.1",
-    "prettier": "^2.8.8",
-    "sass": "^1.83.1"
+    "prettier": "^2.8.8"
   },
   "keywords": [
     "gatsby"
@@ -49,5 +45,10 @@
   "repository": {
     "type": "git",
     "url": ""
+  },
+  "overrides": {
+    "react-server-dom-webpack@0.0.0-experimental-c8b778b7f-20220825": {
+      "react": "^18.2.0"
+    }
   }
 }
