--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "description": "Yeadam's personal website",
   "version": "1.1.3",
+  "engines": {
+    "node": "<=18.20.5"
+  },
   "author": "Yeadam Kim",
   "dependencies": {
     "babel-plugin-styled-components": "^2.1.4",
